# kirlent

./: .gitignore  CHANGES.rst  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
docs/: conf.py  index.rst
kirlent/: __init__.py  config.py  env  kirlent.json  pdf.py  slides.py  tasks.py  templates.py  utils.py
tests/: test_kirlent.py
