[project]
name = "kirlent"
version = "0.3"
description = "Educational material builder."
readme = "README.rst"

authors = [{name = "H. Turgut Uyar", email = "uyar@tekir.org"}]
license = {file = "LICENSE.txt"}

keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Markup"
]

requires-python = "~=3.8"
dependencies = [
    "invoke>=2.0",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
]
lint = [
    "flake8",
    "flake8-isort",
    "mypy",
]
dev = [
    "kirlent[tests,lint]",
    "tox",
    "build",
]

[project.scripts]
kirlent = "kirlent:program.run"

[project.urls]
homepage = "https://tekir.org/kirlent/"
repository = "https://github.com/uyar/kirlent"

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
lines_after_imports = 2
multi_line_output = 2
known_test = "pytest,unittest"
sections = "TEST,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{38,39,310,311}, types, style
isolated_build = True

[testenv]
extras = tests
commands =
    pytest {posargs:tests}

[testenv:coverage]
commands =
    pytest --cov={envsitepackagesdir}/kirlent --cov-report=term-missing tests

[testenv:types]
extras = lint
commands =
    mypy kirlent

[testenv:style]
extras = lint
commands =
    flake8 kirlent
"""

[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"
